--- a/homework/imageBrowser/package.json
+++ b/homework/imageBrowser/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
@@ -57,6 +58,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-native": "^3.8.1",
     "prettier": "^2.0.4",
+    "react-native-dotenv": "^0.2.0",
     "typescript": "~3.8.3"
   },
   "private": true
