--- a/ClassDemos/ContactList/.eslintrc
+++ b/ClassDemos/ContactList/.eslintrc
@@ -46,6 +46,7 @@
       "react-native/no-color-literals": 0,
       "import/no-commonjs": 0,
       "import/no-nodejs-modules": 0,
-      "import/no-unresolved": 0
+      "import/no-unresolved": 0,
+      "react-native/no-inline-styles": 0
     }
 }
