fixed the linting and list view item

--- a/ClassDemos/ContactList/.eslintrc
+++ b/ClassDemos/ContactList/.eslintrc
@@ -32,7 +32,7 @@
         {
           "printWidth": 100,
           "semi": true,
-          "singleQuote": true,
+          "singleQuote": true
         }
       ],
       "@typescript-eslint/no-explicit-any": 0,
@@ -46,7 +46,6 @@
       "react-native/no-color-literals": 0,
       "import/no-commonjs": 0,
       "import/no-nodejs-modules": 0,
-      "import/no-unresolved": 0,
-      "react-native/no-inline-styles": 0
+      "import/no-unresolved": 0    
     }
 }
