--- a/ClassDemos/TodoList/.eslintrc
+++ b/ClassDemos/TodoList/.eslintrc
@@ -37,6 +37,7 @@
       ],
       "@typescript-eslint/no-explicit-any": 0,
       "@typescript-eslint/no-use-before-define": 0,
+      "import/prefer-default-export":0,
       "no-use-before-define": 0,
       "class-methods-use-this": 0,
       "react/prefer-stateless-function": 0,
