--- a/homework/soundCloudStream/.eslintrc
+++ b/homework/soundCloudStream/.eslintrc
@@ -50,6 +50,7 @@
       "import/no-commonjs": 0,
       "import/no-nodejs-modules": 0,
       "import/no-unresolved": 0,
-      "import/no-namespace": 0
+      "import/no-namespace": 0,
+      "import/prefer-default-export": 0
     }
 }
