--- a/finalProject/whereToPark/.eslintrc
+++ b/finalProject/whereToPark/.eslintrc
@@ -54,6 +54,7 @@
       "import/prefer-default-export": 0,
       "import/namespace": 0,
       "import/named": 0,
-      "@typescript-eslint/explicit-module-boundary-types": 0
+      "@typescript-eslint/explicit-module-boundary-types": 0,
+      "@typescript-eslint/no-var-requires": 0
     }
 }
