--- a/finalProject/whereToPark/package.json
+++ b/finalProject/whereToPark/package.json
@@ -6,7 +6,11 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "npx eslint --fix --ext .tsx,.ts ."
+    "lint": "npx eslint --fix --ext .tsx,.ts,.js .",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -33,6 +37,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@babel/preset-typescript": "^7.10.4",
+    "@testing-library/react-native": "^5.0.3",
+    "@types/jest": "^26.0.4",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
@@ -46,6 +53,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-native": "^3.8.1",
+    "jest": "^26.1.0",
+    "jest-expo": "^38.0.2",
     "prettier": "^2.0.5",
     "typescript": "~3.9.5"
   },
