--- a/finalProject/whereToPark/package.json
+++ b/finalProject/whereToPark/package.json
@@ -1,4 +1,19 @@
 {
+  "checkSubmission": {
+    "ex": 3,
+    "students": [
+      {
+        "id": "206793275",
+        "fullName": "Fadi Atamny",
+        "email": "fadiatamny@gmail.com"
+      }
+    ],
+    "os": "Windows",
+    "device": "IOS",
+    "submissionDate": "19/07/2020",
+    "delay": false,
+    "comments": "First of there is the bug that you have to click on the map to unselect a marker. its because of how google maps api works. second of few issues in testing, i could not manage to get snapshot render or the renderer.create() from react-test-renderer to work at all. ive tried alot of things ive gone over all the things we did in class and all the documentation on jest and online in general. i tried to write some tests blindly i hope they are ok since i couldnt test them. They are commented to not ruin other tests"
+  },
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,7 +25,10 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ]
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -37,13 +55,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/react-native": "^5.0.3",
     "@types/jest": "^26.0.4",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
+    "babel-jest": "^26.1.0",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
@@ -56,7 +78,10 @@
     "jest": "^26.1.0",
     "jest-expo": "^38.0.2",
     "prettier": "^2.0.5",
-    "typescript": "~3.9.5"
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.13.1",
+    "typescript": "~3.9.5",
+    "yarn": "^1.22.4"
   },
   "private": true
 }
